Fixes weird alignment issues and adds in coming up next section. To come is the random placement of the fun facts around the page.

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,11 @@ h3 {
   margin: 10px 0 0 0;
 }
 
+h4 {
+  font-size: 20px;
+  margin: 20px auto 0 auto;
+}
+
 p {
   font-size: 14px;
 }
@@ -171,6 +176,7 @@ p {
 .info-section {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin: 60px 0;
 }
 
@@ -178,11 +184,17 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+}
+
+.fun-facts-section {
+  position: absolute;
+  width: 100px;
 }
 
 .bio-section > p {
-  width: 50%;
-  margin: 0 auto;
+  width: 65%;
+  margin: 0 auto 20px auto;
   line-height: 35px;
 }
 
@@ -191,7 +203,7 @@ p {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  width: 500px;
+  width: 100%;
   margin: 30px;
 }
 
@@ -199,9 +211,19 @@ p {
   margin: 10px;
 }
 
-.fun-facts-section, .contact-section {
+/* ------ Incubator Section ------- */
+
+.incubator-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.incubator-item {
   width: 50%;
 }
+
 
 /* ------ Contact Section ------- */
 
@@ -210,6 +232,10 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.contact-section > p {
+  padding: 0 30px;
 }
 
 
